[package]
name = "pallet-xcmp-handler"
description = "Pallet to handle XCMP intricacies."
version = "0.1.0"
edition = "2021"
authors = ["OAK Developement Team"]
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
  "derive",
], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
  "derive",
] }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.163" }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, branch = "release-polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

# Cumulus dependencies
cumulus-primitives-core = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.1.0", default-features = false }


# Polkadot Dependencies
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

# ORML
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.1.0" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.1.0" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.1.0" }

[dev-dependencies]
# Substrate
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

# Cumulus dependencies
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
parachain-info = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.1.0" }

# Polkadot Dependencies
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
xcm-executor = { package = "staging-xcm-executor", git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }

primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
std = [
  "codec/std",
  "cumulus-primitives-core/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "polkadot-parachain-primitives/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm/std",
  "xcm-builder/std",
  "xcm-executor/std",
]

