[package]
name = "turing-runtime"
version = "0.1.0"
description = "Turing, OAK's Kusama Network"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.144", optional = true, features = ["derive"] }
smallvec = "1.9.0"
hex-literal = "0.3.1"

# Local Dependencies
common-runtime = { path = "../common", default-features = false }
pallet-automation-price = { path = "../../pallets/automation-price", default-features = false }
pallet-automation-time = { path = "../../pallets/automation-time", default-features = false }
pallet-automation-time-rpc-runtime-api = { path = "../../pallets/automation-time/rpc/runtime-api", default-features = false }
pallet-valve = { path = "../../pallets/valve", default-features = false }
pallet-vesting = { path = "../../pallets/vesting", default-features = false }
pallet-xcmp-handler = { path = "../../pallets/xcmp-handler", default-features = false }
pallet-xcmp-handler-rpc-runtime-api = { path = "../../pallets/xcmp-handler/rpc/runtime-api", default-features = false }
primitives = { path = "../../primitives", default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.38" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.38" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.38" }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-bounties = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38', default-features = false }

# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }

# Moonbeam Dependencies
pallet-parachain-staking = { git = "https://github.com/OAK-Foundation/moonbeam", default-features = false, branch = "oak-staging" }

# ORML Dependencies
orml-asset-registry = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }

[features]
default = ["std"]
std = [
  "codec/std",
  "common-runtime/std",
  "serde",
  "scale-info/std",
  "log/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",
  "frame-try-runtime/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-automation-time/std",
  "pallet-automation-time-rpc-runtime-api/std",
  "pallet-balances/std",
  "pallet-bounties/std",
  "pallet-collective/std",
  "pallet-democracy/std",
  "pallet-identity/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-preimage/std",
  "pallet-proxy/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-treasury/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-utility/std",
  "pallet-valve/std",
  "pallet-vesting/std",
  "pallet-parachain-staking/std",
  "pallet-xcmp-handler/std",
  "pallet-xcmp-handler-rpc-runtime-api/std",
  "primitives/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "cumulus-pallet-dmp-queue/std",
  "parachain-info/std",
  "polkadot-parachain/std",
  "polkadot-runtime-common/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
  "orml-asset-registry/std",
  "orml-currencies/std",
  "orml-tokens/std",
  "orml-traits/std",
  "orml-xcm-support/std",
  "orml-xtokens/std",
  "orml-unknown-tokens/std",
]

runtime-benchmarks = [
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "frame-benchmarking",
  "frame-system-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-automation-time/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-bounties/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-valve/runtime-benchmarks",
  "pallet-vesting/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "pallet-parachain-staking/runtime-benchmarks",
]

try-runtime = [
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-dmp-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",

  "frame-try-runtime",
  "frame-executive/try-runtime",
  "frame-system/try-runtime",

  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-bounties/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-democracy/try-runtime",
  "pallet-identity/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-parachain-staking/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-session/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-xcm/try-runtime",

  "orml-asset-registry/try-runtime",
  "orml-currencies/try-runtime",
  "orml-tokens/try-runtime",
  "orml-xtokens/try-runtime",
  "orml-unknown-tokens/try-runtime",

  "pallet-automation-time/try-runtime",
  "pallet-automation-price/try-runtime",
  "pallet-xcmp-handler/try-runtime",
  "pallet-vesting/try-runtime",
  "pallet-valve/try-runtime",

  "parachain-info/try-runtime",
]

dev-queue = ["pallet-automation-time/dev-queue"]
