[package]
name = "pallet-automation-time-rpc"
description = "RPC API to provide information about tasks"
version = "0.1.0"
edition = "2021"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

pallet-automation-time-rpc-runtime-api = { path = "./runtime-api" }


